api docs + schema changes
